Sat Aug 18 01:12:01 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (frame_func_id): return proper method ID.

Fri Aug 17 22:43:11 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each): massign should return rvalue(s).

Fri Aug 17 22:10:19 2007  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_basicinstructions.rb: fix old tests.
	  class variables should be inherited.

Fri Aug 17 21:20:44 2007  Koichi Sasada  <ko1@atdot.net>

	* eval.c (rb_call), eval_method.ci (rb_add_method, rb_alias),
	  insnhelper.ci (vm_call_method): fix to save safelevel for
	  method node.

	* include/ruby/node.h: ditto.

	* bootstraptest/test_method.rb: add a test for above.

Fri Aug 17 16:02:50 2007  Koichi Sasada  <ko1@atdot.net>

	* thread.c (rb_thread_terminate_all): fix to ignore
	  exceptions.

	* thread.c (thread_start_func_2): fix
	  abort_on_exception process.  [ruby-dev:31394]

Fri Aug 17 14:38:36 2007  Tanaka Akira  <akr@fsij.org>

	* bootstraptest/runner.rb (in_temporary_working_directory): use
	  Dir.mktmpdir to create and remove temporary directory.
	  (Dir.mktmpdir): define if not available.
	  [ruby-dev:31431]

Fri Aug 17 03:07:37 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each): fix thorw insn option of next.

Fri Aug 17 01:25:23 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_set_arguments), insnhelper.ci
	  (vm_callee_setup_arg, vm_yield_setup_args): fix 
	  block parameter problems. [ruby-dev:31437], [ruby-dev:31440]

	* bootstraptest/test_block.rb: add a test of [ruby-dev:31440].

Fri Aug 17 01:24:12 2007  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (ruby_iseq_disasm): fix to show arg_simple value.

Fri Aug 17 01:21:29 2007  Koichi Sasada  <ko1@atdot.net>

	* insns.def (throw): insert a RUBY_VM_CHECK_INTS(). [ruby-dev:31361]

Thu Aug 16 20:40:50 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (bigtrunc): RBIGNUM(x)->len may be zero.  out of bound
	  access.  [ruby-dev:31404]
